"Correcting the project"